--- a/css/style2.css
+++ b/css/style2.css
@@ -16,8 +16,8 @@
 
 html,body{
     height: 100%;
-    overflow-y: hidden ;
-    overflow-x: hidden;
+    /* overflow-y: hidden ; */
+    /* overflow-x: hidden; */
 }
 
 header{
