--- a/css/style2.css
+++ b/css/style2.css
@@ -6,6 +6,13 @@
     background-color: black; 
 }
 
+/* section{
+    background-image: url(/img/1fZK.gif);
+    background-repeat: repeat-x;
+    background-size: auto;
+    backface-visibility: visible;
+} */
+
 .center{
     display: flex;
     flex-wrap: wrap;
@@ -48,8 +55,10 @@ header{
 h1{
     color: #FFF;
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 20px;
     margin-left: 30px;
+    background: transparent;
+    font-size: 30px;
 }
 
 .slider{
@@ -67,24 +76,28 @@ h1{
     width: 600px;
     height: 20em;
     margin: 20px ;
+    background-color: transparent;
 }
 
 .slide_2 img{
     width: 600px;
     height: 20em;
     margin: 20px ;
+    background-color: transparent;
 }
 
 .slide_3 img{
     width: 600px;
     height: 20em;
     margin: 20px ;
+    background-color: transparent;
 }
 
 .slide_4 img{
     width: 600px;
     height: 20em;
     margin: 20px ;
+    background-color: transparent;
 }
 
 .slides{
@@ -105,15 +118,17 @@ h1{
 
 .slide img{
     width: 40%;
+    background-color: transparent;
 }
 
 .manual-navigation{
     position: absolute;
     width: 650px;
-    margin-top: 350px;
+    margin-top: 320px;
+    margin-left: -20px;
     display: flex;
     justify-content: center;
-    background-color: #000000;
+    background-color: transparent;
 }
 
 .manual-btn{
@@ -122,6 +137,7 @@ h1{
     border-radius: 10px;
     cursor: pointer;
     transition: 1s;
+    background: transparent;
 }
 
 .manual-btn:not(:last-child){
@@ -159,9 +175,11 @@ h1{
 .navigation-auto{
     position: absolute;
     width: 650px;
-    margin-top: 350px;
+    margin-top: 320px;
+    margin-left: -20px;
     display: flex;
     justify-content: center;
+    background-color: transparent;
 }
 
 .navigation-auto div:not(:last-child){
@@ -189,8 +207,17 @@ h1{
     text-align: center;
     justify-content: center;
     font-size: 20px;
+    background: transparent;
 }
 
-.texto1 p{
-    bottom: 20px;
+.texto2{
+    color: #FFF;
+    text-align: center;
+    justify-content: center;
+    font-size: 20px;
+    background: transparent;
+}
+
+p,h2,span{
+    background: transparent;
 }
