--- a/css/style2.css
+++ b/css/style2.css
@@ -218,6 +218,30 @@ h1{
     background: transparent;
 }
 
+.texto3{
+    color: #FFF;
+    text-align: center;
+    justify-content: center;
+    font-size: 20px;
+    background: transparent;
+}
+
+.texto4{
+    color: #FFF;
+    text-align: center;
+    justify-content: center;
+    font-size: 20px;
+    background: transparent;
+}
+
+.texto5{
+    color: #FFF;
+    text-align: center;
+    justify-content: center;
+    font-size: 20px;
+    background: transparent;
+}
+
 p,h2,span{
     background: transparent;
 }
