--- a/css/style2.css
+++ b/css/style2.css
@@ -24,7 +24,7 @@
 html,body{
     height: 100%;
     /* overflow-y: hidden ; */
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 header{
